# EvoSkill

./: .gitignore  COMPLETION_REPORT.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE_REPORT.md  KODA_PI_MONO_COMPARISON_REPORT.md  KODA_PI_MONO_DETAILED_COMPARISON.md  KODA_STATUS.md  KODA_TEST_REPORT.md  LICENSE  PROJECT_STATUS.md  README.md  TODO.md  pyproject.toml  test_phase1.py  test_quick.py  test_sprint1.py  test_sprint2.py  test_sprint3_6.py
demo_workspace/: koda_validation_demo.py  skill_evolution_demo.py
docs/: ARCHITECTURE.md  CODING_AGENT_DESIGN.md  CONTEXT_COMPACTION_DESIGN.md  CONTEXT_DESIGN.md  DESIGN_SUMMARY.md  INTEGRATION_DESIGN.md  KIMI_CODING_INTEGRATION.md  KODA_MODULES_DESIGN.md  KODA_RESTRUCTURE_PLAN.md  MANUAL_TESTING_GUIDE.md  PI_CODING_AGENT_ANALYSIS.md  PI_MONO_COMPONENTS_ANALYSIS.md  PROJECT_STATUS_AND_ROADMAP.md  PROMPTS.md  ROADMAP.md  SKILL_EVOLUTION_DESIGN.md  SYSTEM_PROMPT.md  USER_AGENT_VERSION_GUIDE.md  koda_validation_analysis.md
evoskill/: __init__.py  config.py
evoskill/cli/: __init__.py  main.py
evoskill/coding_agent/: __init__.py  agent.py  koda_adapter.py  koda_adapter_v2.py  types.py
evoskill/core/: __init__.py  context.py  context_compactor.py  events.py  integrated_session.py  llm.py  prompts.py  session.py  types.py
evoskill/evolution/: __init__.py  analyzer.py  api_discovery.py  designer.py  engine.py  generator.py  integrator.py  matcher.py  validator.py
examples/: basic_usage.py  koda_example.py  koda_v2_demo.py
fetched_sources/: SUMMARY.md
koda/: 01_ARCHITECTURE.md  02_PI_MONO_ANALYSIS.md  03_IMPLEMENTATION_STATUS.md  04_GAP_ANALYSIS.md  05_API_REFERENCE.md  06_DETAILED_COMPARISON.md  06_DETAILED_DESIGN.md  08_FINAL_INVENTORY.md  100_PERCENT_PARITY_STATUS.md  ARCHITECTURE.md  DESIGN_ROADMAP.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SPEC.md  PI_MONO_100_PERCENT_CHECKLIST.md  PI_MONO_DETAILED_COMPARISON.md  PI_MONO_PARITY.md  README.md  README_V2.md  __init__.py  cli.py  config.py
test_config_tmp/: config.yaml
tests/: MANUAL_TEST_CHECKLIST.md  TEST_CASES.md  __init__.py  conftest.py  integration_test.py  test_agent_proxy.py  test_builtin_tools.py  test_claude_code_mapping.py  test_compaction_advanced.py  test_config.py  test_context_compactor.py  test_edit_fuzzy.py  test_edit_operations.py  test_github_copilot.py  test_koda_utils.py  test_llm.py  test_oauth.py  test_p0_implementations.py  test_session.py  test_types.py  test_user_agent_versions.py  test_validation_integration.py
(+253 files in other folders)
